force-app/main/default/objects/Product2/fields/Selling_Price_Before__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price_Before__c</fullName>
    <description>The previous selling price when updated</description>
    <label>Selling Price Before</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>