force-app/main/default/objects/Product2/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>GTIN__c</columns>
    <columns>Purchasing_Price__c</columns>
    <columns>Selling_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>